fix: fixed mobile screen player preview image issue with the image width too small (#96)

--- a/src/app/shared/shared-components/video-player/video-player.component.scss
+++ b/src/app/shared/shared-components/video-player/video-player.component.scss
@@ -18,7 +18,7 @@
 
   img {
     position: absolute;
-    width: 302px;
+    width: 100%;
     height: 180px;
     border-radius: 8px;
     object-fit: cover;
